--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.9",
     "d3": "^7.9.0",
+    "d3-array": "^3.2.4",
+    "d3-shape": "^3.2.0",
     "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
@@ -26,7 +28,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "15.2.0",
     "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
